update index.html title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="rot_circle.css">
-    <title>Document</title>
+    <title>Animated Circles</title>
 </head>
 <body>
     <svg id = "page-loader">
